<resources>
    <string name="app_name">StreamAvailability</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_account">Account</string>
    <string name="title_watchlist">Watchlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_slider">Image Slider</string>
    <string name="search_view">search</string>
    <string name="most_popular">Most Popular</string>
    <string name="recommendations">Recommendations</string>
    <string name="poster_of_a_trending_movie">Poster of a trending movie</string>
    <string name="title_poster">Title Poster</string>
    <string name="description_trending_poster">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="cancel_button">Cancel</string>
    <string name="movie_poster">movie poster</string>
    <string name="movie_name">Movie Name</string>
    <string name="movie_description">This is ent of the de</string>
    <string name="platform_logo">platform Logo</string>
    <string name="movie_image">movie image</string>
    <string name="title_movie">title movie</string>
    <string name="movie_type">Movie</string>
    <string name="genre">Genre</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="firebase_api_key">AIzaSyDy3PPhEqlLbgQKa62t4hq94Lqt_NNGUAY</string>

</resources>