<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_height="match_parent"
    android:theme="@style/Theme.StreamAvailability"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        tools:context=".ui.moviedetails.MovieDetails">



    <ImageView
        android:id="@+id/poster_movie_details"
        android:layout_width="match_parent"
        android:layout_height="430dp"

        android:contentDescription="@string/poster_of_a_trending_movie"
        android:scaleType="centerCrop"
        android:src="@drawable/default_image_background"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


      <ImageView
          android:id="@+id/imageViewGradiant"
          android:layout_width="458dp"
          android:layout_height="462dp"
          android:background="@drawable/gradient_bd"
          android:contentDescription="@string/movie_poster"
          android:scaleType="centerCrop"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/title_movie_details"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/poster_movie_details"
          android:layout_marginBottom="40dp"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          android:text="@string/title_poster"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="@+id/poster_movie_details"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent" />

      <TextView
          android:id="@+id/description_movie_details"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/title_movie_details"
          android:ellipsize="end"
          android:layout_marginTop="-40dp"
          android:padding="20dp"
          android:text="@string/description_trending_poster"
          android:textColor="@color/white"
          android:textSize="14sp"
          app:layout_constraintTop_toBottomOf="@id/poster_movie_details"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>


      <TextView
          android:id="@+id/platforms_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="20dp"
          android:text="Movie Provider"
          android:textColor="@color/white_500"
          app:layout_constraintTop_toBottomOf="@id/description_movie_details"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>


      <LinearLayout
          android:id="@+id/platforms"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          app:layout_constraintTop_toBottomOf="@id/platforms_label"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/rating_ct"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          android:paddingBottom="5dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"

          app:layout_constraintTop_toBottomOf="@id/platforms">

        <TextView
            android:id="@+id/rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rating : "
            android:textSize="12sp"
            android:textColor="@color/white_500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/rating_movie_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="79dp"
            android:textSize="12sp"
            android:text="-/- "

            android:textColor="@color/white_500"
            app:layout_constraintStart_toEndOf="@id/rating_label"
            app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>
      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/runtime_ct"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          android:paddingBottom="5dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"

          app:layout_constraintTop_toBottomOf="@id/rating_ct">

        <TextView
            android:id="@+id/runtime_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Runtime : "
            android:textSize="12sp"
            android:textColor="@color/white_500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="69dp"
            android:text="-/- "
            android:textSize="12sp"

            android:textColor="@color/white_500"
            app:layout_constraintStart_toEndOf="@id/runtime_label"
            app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>


      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/age_rating_ct"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          android:paddingBottom="5dp"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"

          app:layout_constraintTop_toBottomOf="@id/runtime_ct">

        <TextView
            android:id="@+id/age_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age rating : "
            android:textSize="12sp"
            android:textColor="@color/white_500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/age_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textSize="12sp"


            android:text="-/- "
            android:textColor="@color/white_500"
            app:layout_constraintStart_toEndOf="@id/age_rating_label"
            app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>
      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/genre_ct"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          android:paddingBottom="5dp"
          android:textSize="12sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"

          app:layout_constraintTop_toBottomOf="@id/age_rating_ct">

        <TextView
            android:id="@+id/genre_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Genre : "
            android:textColor="@color/white_500"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="83dp"
            android:textSize="12sp"
            android:text="-/- "

            android:textColor="@color/white_500"
            app:layout_constraintStart_toEndOf="@id/genre_label"
            app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>
      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/director_ct"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:paddingStart="20dp"
          android:paddingEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"

          app:layout_constraintTop_toBottomOf="@id/genre_ct">

        <TextView
            android:id="@+id/director_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Director : "
            android:textColor="@color/white_500"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:text="-/- "
            android:textSize="12sp"

            android:textColor="@color/white_500"
            app:layout_constraintStart_toEndOf="@id/director_label"
            app:layout_constraintTop_toTopOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
          android:id="@+id/casting_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="20dp"
          android:text="Casting"
          android:textColor="@color/white_500"
          app:layout_constraintTop_toBottomOf="@id/director_ct"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          />


      <LinearLayout
          android:id="@+id/casting"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/casting_label"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"/>

      <LinearLayout
          android:id="@+id/video"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/casting"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"/>

      <EditText
          android:id="@+id/editTextTextMultiLine"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:minHeight="150dp"
          android:ems="10"
          android:importantForAutofill="no"
          android:textSize="12sp"
          android:layout_margin="20dp"
          android:textColor="@color/white"
          android:textColorHint="@color/white_500"
          android:background="@drawable/round_search_field"
          android:hint="note about movie..."
          android:gravity="start|top"
          android:inputType="textMultiLine"

          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@id/casting"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>